Updated qa_pair_generation python code

--- a/codes/rag/qa_pair_generation.ipynb
+++ b/codes/rag/qa_pair_generation.ipynb
@@ -2,21 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4d1e737",
+   "execution_count": 27,
+   "id": "6b14b197",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QA pairs saved to qa_pairs.csv\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "import pandas as pd\n",
+    "import re\n",
     "\n",
-    "ollama_url_inf = \"http://localhost:11434/api/show\"\n",
-    "ollama_url_emb = \"http://localhost:11434/api/embeddings\"\n",
     "ollama_url_gen = \"http://localhost:11434/api/generate\"\n",
-    "ollama_url_cht = \"http://localhost:11434/api/chat\"\n",
     "ollama_model_name = \"llama3.2:latest\"\n",
-    "\n",
     "\n",
     "def generate_qa_pairs(chunk, model=ollama_model_name):\n",
     "    prompt = f\"\"\"\n",
@@ -41,12 +46,25 @@
     "    payload = {\"model\": model, \"prompt\": prompt, \"stream\": False}\n",
     "    headers = {\"Content-Type\": \"application/json\"}\n",
     "    response = requests.post(ollama_url_gen, headers=headers, data=json.dumps(payload))\n",
-    "    if response.status_code == 200:\n",
-    "        return json.loads(response.json().get(\"content\", \"[]\"))\n",
-    "    else:\n",
+    "    \n",
+    "    if response.status_code != 200:\n",
     "        raise Exception(f\"Error from Ollama: {response.text}\")\n",
+    "    \n",
+    "    content = response.json().get(\"response\", \"\")\n",
+    "    try:\n",
+    "        json_match = re.search(r\"\\[.*?\\]\", content, re.DOTALL)\n",
+    "        if json_match:\n",
+    "            raw_json = json_match.group()\n",
+    "            sanitized_json = re.sub(r\",\\s*]\", \"]\", raw_json)\n",
+    "            qa_pairs = json.loads(sanitized_json)\n",
+    "            return qa_pairs\n",
+    "        else:\n",
+    "            raise Exception(f\"Valid JSON not found in response: {content}\")\n",
+    "    except json.JSONDecodeError as e:\n",
+    "        raise Exception(f\"Failed to parse JSON response: {content}\")\n",
     "\n",
-    "data = {\"chunk_id\": [1], \"chunk_text\": [\"List | War | Death range | Date | Combatants | Location ||| crusades | 1 – 9 million [ 25 ] [ 26 ] | 1095 – 1291 | originally byzantine empire vs. seljuk empire, but evolved into christians vs. muslims | europe and the middle east || Reconquista | 7 million[27] | 718–1492 | Spanish and Portuguese Christians vs. Spanish and Portuguese Muslims | Iberian Peninsula || French Revolutionary and Napoleonic Wars | 5–7 million[28] | 1792–1815 | French Republic, later French Empire, vs. Coalition forces | Europe || Conquests of Menelik II | 6 million[29] | 1878–1904 | Ethiopian Empire vs. Emirate of Harar, Kingdom of Kaffa, Kingdom of Wolaita, and allies | Horn of Africa || Second Congo War | 3–5.4 million[30][31][32] | 1998–2003 | Multiple sides | Democratic Republic of the Congo || Spanish conquest of New Granada | 5.25 million[33][34] | 1525–1540 | Spanish Empire and Klein-Venedig vs. Muisca Confederation and other civilizations | Colombia || Deccan wars | 4.6–5 million[35] | 1680–1707 | Mughal Empire vs. Maratha Confederacy | Indian subcontinent || Nigerian Civil War | 3.04–4.1 million[36][37] | 1967–1970 | Nigeria vs. Biafra | Nigeria || Deluge | 3–4 milion[38] | 1648–1666 | Poland–Lithuania vs Swedish Empire and Russia | Eastern Europe || French Wars of Religion | 2–4 million[39] | 1562–1598 | French catholics vs Huguenots | France || Korean War | 2.5–3.5 million[40][22] | 1950–1953 | North Korea and allies vs. South Korea and allies | Korean Peninsula || Vietnam War | 1.1–3.4 million[41][42] | 1955–1975 | North Vietnam and allies vs. South Vietnam and allies | Indochina ||\"]}\n",
+    "# Sample chunk data\n",
+    "data = {\"chunk_id\": [1, 2], \"chunk_text\": [\"This is a sample test. Bangladesh was liberated in 1971.\", \"Mujibur was the main leader for Liberation of Bangladesh.\"]}\n",
     "df_chunks = pd.DataFrame(data)\n",
     "\n",
     "qa_data = []\n",
@@ -66,98 +84,83 @@
     "\n",
     "df_qa = pd.DataFrame(qa_data)\n",
     "df_qa.to_csv(\"qa_pairs.csv\", index=False)\n",
-    "print(\"QA pairs saved to qa_pairs.csv\")\n",
-    "\n",
-    "df_qa"
+    "print(\"QA pairs saved to qa_pairs.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "00d31f96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ask(query):\n",
-    "    payload = {\"model\": \"llama3.2:latest\", \"prompt\": query, \"stream\": False}\n",
-    "    headers = {\"Content-Type\": \"application/json\"}\n",
-    "    response = requests.post(ollama_url_gen, headers=headers, data=json.dumps(payload))\n",
-    "    print(response.json().get(\"response\", \"No response available\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "e1663c3c",
+   "execution_count": 28,
+   "id": "a53cc127",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Here is the list of question-answer pairs in JSON format:\n",
-      "\n",
-      "[\n",
-      "    {\"question\": \"What was the approximate number of deaths during the Crusades?\", \"answer\": \"The Crusades resulted in a death range of 1–9 million.\"},\n",
-      "    {\"question\": \"When did the Crusades take place?\", \"answer\": \"The Crusades took place from 1095 to 1291.\"},\n",
-      "    {\"question\": \"Which empires were involved in the Crusades?\", \"answer\": \"The Crusades involved the Byzantine Empire vs. the Seljuk Empire, which later evolved into Christians vs. Muslims.\"},\n",
-      "    {\"question\": \"Where did the Crusades occur?\", \"answer\": \"The Crusades took place in Europe and the Middle East.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the Reconquista?\", \"answer\": \"The Reconquista resulted in approximately 7 million deaths.\"},\n",
-      "    {\"question\": \"When did the Reconquista take place?\", \"answer\": \"The Reconquista took place from 718 to 1492.\"},\n",
-      "    {\"question\": \"Which sides were involved in the Reconquista?\", \"answer\": \"The Reconquista was fought between Spanish and Portuguese Christians vs. Spanish and Portuguese Muslims.\"},\n",
-      "    {\"question\": \"Where did the Reconquista occur?\", \"answer\": \"The Reconquista took place in the Iberian Peninsula.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the French Revolutionary and Napoleonic Wars?\", \"answer\": \"The French Revolutionary and Napoleonic Wars resulted in a death range of 5–7 million.\"},\n",
-      "    {\"question\": \"When did the French Revolutionary and Napoleonic Wars take place?\", \"answer\": \"The French Revolutionary and Napoleonic Wars took place from 1792 to 1815.\"},\n",
-      "    {\"question\": \"Which sides were involved in the French Revolutionary and Napoleonic Wars?\", \"answer\": \"The French Revolutionary and Napoleonic Wars were fought between the French Republic, later French Empire, vs. Coalition forces.\"},\n",
-      "    {\"question\": \"Where did the French Revolutionary and Napoleonic Wars occur?\", \"answer\": \"The French Revolutionary and Napoleonic Wars took place in Europe.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the Conquests of Menelik II?\", \"answer\": \"The Conquests of Menelik II resulted in approximately 6 million deaths.\"},\n",
-      "    {\"question\": \"When did the Conquests of Menelik II take place?\", \"answer\": \"The Conquests of Menelik II took place from 1878 to 1904.\"},\n",
-      "    {\"question\": \"Which sides were involved in the Conquests of Menelik II?\", \"answer\": \"The Conquests of Menelik II were fought between the Ethiopian Empire vs. Emirate of Harar, Kingdom of Kaffa, and Kingdom of Wolaita.\"},\n",
-      "    {\"question\": \"Where did the Conquests of Menelik II occur?\", \"answer\": \"The Conquests of Menelik II took place in the Horn of Africa.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the Second Congo War?\", \"answer\": \"The Second Congo War resulted in a death range of 3–5.4 million.\"},\n",
-      "    {\"question\": \"When did the Second Congo War take place?\", \"answer\": \"The Second Congo War took place from 1998 to 2003.\"},\n",
-      "    {\"question\": \"Which sides were involved in the Second Congo War?\", \"answer\": \"The Second Congo War was fought by multiple sides.\"},\n",
-      "    {\"question\": \"Where did the Second Congo War occur?\", \"answer\": \"The Second Congo War took place in the Democratic Republic of the Congo.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the Spanish conquest of New Granada?\", \"answer\": \"The Spanish conquest of New Granada resulted in approximately 5.25 million deaths.\"},\n",
-      "    {\"question\": \"When did the Spanish conquest of New Granada take place?\", \"answer\": \"The Spanish conquest of New Granada took place from 1525 to 1540.\"},\n",
-      "    {\"question\": \"Which sides were involved in the Spanish conquest of New Granada?\", \"answer\": \"The Spanish conquest of New Granada was fought between the Spanish Empire and Klein-Venedig vs. Muisca Confederation and other civilizations.\"},\n",
-      "    {\"question\": \"Where did the Spanish conquest of New Granada occur?\", \"answer\": \"The Spanish conquest of New Granada took place in Colombia.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the Deccan wars?\", \"answer\": \"The Deccan wars resulted in a death range of 4.6–5 million.\"},\n",
-      "    {\"question\": \"When did the Deccan wars take place?\", \"answer\": \"The Deccan wars took place from 1680 to 1707.\"},\n",
-      "    {\"question\": \"Which sides were involved in the Deccan wars?\", \"answer\": \"The Deccan wars were fought between the Mughal Empire vs. Maratha Confederacy.\"},\n",
-      "    {\"question\": \"Where did the Deccan wars occur?\", \"answer\": \"The Deccan wars took place in the Indian subcontinent.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the Nigerian Civil War?\", \"answer\": \"The Nigerian Civil War resulted in a death range of 3.04–4.1 million.\"},\n",
-      "    {\"question\": \"When did the Nigerian Civil War take place?\", \"answer\": \"The Nigerian Civil War took place from 1967 to 1970.\"},\n",
-      "    {\"question\": \"Which sides were involved in the Nigerian Civil War?\", \"answer\": \"The Nigerian Civil War was fought between Nigeria vs. Biafra.\"},\n",
-      "    {\"question\": \"Where did the Nigerian Civil War occur?\", \"answer\": \"The Nigerian Civil War took place in Nigeria.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the Deluge?\", \"answer\": \"The Deluge resulted in a death range of 3–4 million.\"},\n",
-      "    {\"question\": \"When did the Deluge take place?\", \"answer\": \"The Deluge took place from 1648 to 1666.\"},\n",
-      "    {\"question\": \"Which sides were involved in the Deluge?\", \"answer\": \"The Deluge was fought between Poland vs. Sweden, Russia, and other countries.\"},\n",
-      "    {\"question\": \"Where did the Deluge occur?\", \"answer\": \"The Deluge took place in Eastern Europe.\"},\n",
-      "    {\"question\": \"How many deaths occurred during the French Revolutionary and Napoleonic Wars?\", \"answer\": \"The French Revolutionary and Napoleonic Wars resulted in a death range of 5–7 million.\"},\n",
-      "    {\"question\": \"When did the French Revolutionary and Napoleonic Wars take place?\", \"answer\": \"The French Revolutionary and Napoleonic Wars took place from 1792 to 1815.\"},\n",
-      "    {\"question\": \"Which sides were involved in the French Revolutionary and Napoleonic Wars?\", \"answer\": \"The French Revolutionary and Napoleonic Wars were fought between the French Republic, later French Empire, vs. Coalition forces.\"},\n",
-      "    {\"question\": \"Where did the French Revolutionary and Napoleonic Wars occur?\", \"answer\": \"The French Revolutionary and Napoleonic Wars took place in Europe.\"}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>chunk_id</th>\n",
+       "      <th>question</th>\n",
+       "      <th>answer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is a sample test.</td>\n",
+       "      <td>This is a sample test.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>When was Bangladesh liberated?</td>\n",
+       "      <td>Bangladesh was liberated in 1971.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Who was the main leader for the Liberation of ...</td>\n",
+       "      <td>Mujibur was the main leader for Liberation of ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   chunk_id                                           question  \\\n",
+       "0         1                             This is a sample test.   \n",
+       "1         1                     When was Bangladesh liberated?   \n",
+       "2         2  Who was the main leader for the Liberation of ...   \n",
+       "\n",
+       "                                              answer  \n",
+       "0                             This is a sample test.  \n",
+       "1                  Bangladesh was liberated in 1971.  \n",
+       "2  Mujibur was the main leader for Liberation of ...  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "ask('''You are an expert assistant skilled at generating question-answer pairs for text comprehension. \n",
-    "Given a text chunk, generate diverse, relevant, and accurate question-answer pairs that cover the key information in the chunk. \n",
-    "Your output should be a list of pairs in JSON format, where each pair includes a \"question\" and its corresponding \"answer.\"\n",
-    "\n",
-    "Example:\n",
-    "Chunk: \"The Eiffel Tower is a wrought-iron lattice tower located on the Champ de Mars in Paris, France. It was designed by Gustave Eiffel's engineering company and completed in 1889.\"\n",
-    "\n",
-    "Output:\n",
-    "[\n",
-    "  {{\"question\": \"Where is the Eiffel Tower located?\", \"answer\": \"The Eiffel Tower is located on the Champ de Mars in Paris, France.\"}},\n",
-    "  {{\"question\": \"Who designed the Eiffel Tower?\", \"answer\": \"The Eiffel Tower was designed by Gustave Eiffel's engineering company.\"}},\n",
-    "  {{\"question\": \"When was the Eiffel Tower completed?\", \"answer\": \"The Eiffel Tower was completed in 1889.\"}}\n",
-    "]\n",
-    "\n",
-    "Now, process the following chunk:\n",
-    "Chunk: List | War | Death range | Date | Combatants | Location ||| crusades | 1 – 9 million [ 25 ] [ 26 ] | 1095 – 1291 | originally byzantine empire vs. seljuk empire, but evolved into christians vs. muslims | europe and the middle east || Reconquista | 7 million[27] | 718–1492 | Spanish and Portuguese Christians vs. Spanish and Portuguese Muslims | Iberian Peninsula || French Revolutionary and Napoleonic Wars | 5–7 million[28] | 1792–1815 | French Republic, later French Empire, vs. Coalition forces | Europe || Conquests of Menelik II | 6 million[29] | 1878–1904 | Ethiopian Empire vs. Emirate of Harar, Kingdom of Kaffa, Kingdom of Wolaita, and allies | Horn of Africa || Second Congo War | 3–5.4 million[30][31][32] | 1998–2003 | Multiple sides | Democratic Republic of the Congo || Spanish conquest of New Granada | 5.25 million[33][34] | 1525–1540 | Spanish Empire and Klein-Venedig vs. Muisca Confederation and other civilizations | Colombia || Deccan wars | 4.6–5 million[35] | 1680–1707 | Mughal Empire vs. Maratha Confederacy | Indian subcontinent || Nigerian Civil War | 3.04–4.1 million[36][37] | 1967–1970 | Nigeria vs. Biafra | Nigeria || Deluge | 3–4 milion[38] | 1648–1666 | Poland–Lithuania vs Swedish Empire and Russia | Eastern Europe || French Wars of Religion | 2–4 million[39] | 1562–1598 | French catholics vs Huguenots | France || Korean War | 2.5–3.5 million[40][22] | 1950–1953 | North Korea and allies vs. South Korea and allies | Korean Peninsula || Vietnam War | 1.1–3.4 million[41][42] | 1955–1975 | North Vietnam and allies vs. South Vietnam and allies | Indochina ||''')"
+    "df_qa"
    ]
   }
  ],
