Updated qa_pair_generation python code

--- a/codes/rag/qa_pair_generation.ipynb
+++ b/codes/rag/qa_pair_generation.ipynb
@@ -2,18 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6b14b197",
+   "execution_count": 30,
+   "id": "bf5ff37e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QA pairs saved to qa_pairs.csv\n"
+      "299\n"
      ]
     }
    ],
+   "source": [
+    "import pickle\n",
+    "with open(\"scraped_chunks.pkl\", \"rb\") as f:\n",
+    "    data = pickle.load(f)\n",
+    "print(len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "77001c3d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -61,36 +74,23 @@
     "        else:\n",
     "            raise Exception(f\"Valid JSON not found in response: {content}\")\n",
     "    except json.JSONDecodeError as e:\n",
-    "        raise Exception(f\"Failed to parse JSON response: {content}\")\n",
-    "\n",
-    "# Sample chunk data\n",
-    "data = {\"chunk_id\": [1, 2], \"chunk_text\": [\"This is a sample test. Bangladesh was liberated in 1971.\", \"Mujibur was the main leader for Liberation of Bangladesh.\"]}\n",
-    "df_chunks = pd.DataFrame(data)\n",
-    "\n",
-    "qa_data = []\n",
-    "for _, row in df_chunks.iterrows():\n",
-    "    chunk_id = row[\"chunk_id\"]\n",
-    "    chunk_text = row[\"chunk_text\"]\n",
-    "    try:\n",
-    "        qa_pairs = generate_qa_pairs(chunk_text)\n",
-    "        for pair in qa_pairs:\n",
-    "            qa_data.append({\n",
-    "                \"chunk_id\": chunk_id,\n",
-    "                \"question\": pair[\"question\"],\n",
-    "                \"answer\": pair[\"answer\"]\n",
-    "            })\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error processing chunk {chunk_id}: {e}\")\n",
-    "\n",
-    "df_qa = pd.DataFrame(qa_data)\n",
-    "df_qa.to_csv(\"qa_pairs.csv\", index=False)\n",
-    "print(\"QA pairs saved to qa_pairs.csv\")"
+    "        raise Exception(f\"Failed to parse JSON response: {content}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a53cc127",
+   "execution_count": 43,
+   "id": "d360e6bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_chunks = pd.DataFrame(data)[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "df833ed8",
    "metadata": {},
    "outputs": [
     {
@@ -114,53 +114,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>chunk_id</th>\n",
-       "      <th>question</th>\n",
-       "      <th>answer</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>This is a sample test.</td>\n",
-       "      <td>This is a sample test.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>When was Bangladesh liberated?</td>\n",
-       "      <td>Bangladesh was liberated in 1971.</td>\n",
+       "      <td>List | War | Death range | Date | Combatants |...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/List_of_wars_by_...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Who was the main leader for the Liberation of ...</td>\n",
-       "      <td>Mujibur was the main leader for Liberation of ...</td>\n",
+       "      <td>List | War | Death range | Date | Combatants |...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/List_of_wars_by_...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   chunk_id                                           question  \\\n",
-       "0         1                             This is a sample test.   \n",
-       "1         1                     When was Bangladesh liberated?   \n",
-       "2         2  Who was the main leader for the Liberation of ...   \n",
+       "                                                   0  \\\n",
+       "1  List | War | Death range | Date | Combatants |...   \n",
+       "2  List | War | Death range | Date | Combatants |...   \n",
        "\n",
-       "                                              answer  \n",
-       "0                             This is a sample test.  \n",
-       "1                  Bangladesh was liberated in 1971.  \n",
-       "2  Mujibur was the main leader for Liberation of ...  "
+       "                                                   1  \n",
+       "1  https://en.wikipedia.org/wiki/List_of_wars_by_...  \n",
+       "2  https://en.wikipedia.org/wiki/List_of_wars_by_...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_qa"
+    "df_chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ec55f9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c6e3ef97f5c24ba1bc5aeb845c4720d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "qa_data = []\n",
+    "for _, row in tqdm(df_chunks.iterrows(), total=len(df_chunks)):\n",
+    "    chunk_id = row[1]\n",
+    "    chunk_text = row[0]\n",
+    "    try:\n",
+    "        qa_pairs = generate_qa_pairs(chunk_text)\n",
+    "        for pair in qa_pairs:\n",
+    "            qa_data.append({\n",
+    "                \"chunk_id\": chunk_id,\n",
+    "                \"question\": pair[\"question\"],\n",
+    "                \"answer\": pair[\"answer\"]\n",
+    "            })\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing chunk {chunk_id}: {e}\")\n",
+    "\n",
+    "df_qa = pd.DataFrame(qa_data)\n",
+    "df_qa.to_csv(\"qa_pairs.csv\", index=False)\n",
+    "print(\"QA pairs saved to qa_pairs.csv\")"
    ]
   }
  ],
