--- a/codes/rag/scraping_load.ipynb
+++ b/codes/rag/scraping_load.ipynb
@@ -190,11 +190,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "e4e3efb3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"scraped_chunks.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(scraped_chunks, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0dac0f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "299\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"scraped_chunks.pkl\", \"rb\") as f:\n",
+    "    data = pickle.load(f)\n",
+    "print(len(data))"
+   ]
   }
  ],
  "metadata": {
